{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 602,
  "lineage": "1cf03f48-89e6-c0a2-062a-c86779d9b7ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PersonalSiteEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:739275461129:instance/i-0be04929061199618",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PersonalSiteInstanceProfile",
            "id": "i-0be04929061199618",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Personal-Website-EC2KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06deb3a9bf9a7f694"
              }
            ],
            "primary_network_interface_id": "eni-06deb3a9bf9a7f694",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_ip": "54.224.108.188",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014098c45abe84d9c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e097f80f9d1a5e94",
            "tags": {
              "Name": "PersonalSiteEC2Instance"
            },
            "tags_all": {
              "Name": "PersonalSiteEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f49f7c86d96c83c2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.PersonalSiteInstanceProfile",
            "aws_security_group.allow_http_https_ssh",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "personal_site_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:internet-gateway/igw-02ca43d7cedf53ecc",
            "id": "igw-02ca43d7cedf53ecc",
            "owner_id": "739275461129",
            "region": "us-east-1",
            "tags": {
              "Name": "PersonalSiteInternetGateway"
            },
            "tags_all": {
              "Name": "PersonalSiteInternetGateway"
            },
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "personal_site_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/6c012a34e14ef929",
            "arn_suffix": "app/personal-site-alb/6c012a34e14ef929",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "personal-site-alb-295450848.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/6c012a34e14ef929",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "personal-site-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-015640bda207f0d8b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aa907fc0019480f7"
              },
              {
                "subnet_id": "subnet-0e097f80f9d1a5e94"
              }
            ],
            "subnets": [
              "subnet-0aa907fc0019480f7",
              "subnet-0e097f80f9d1a5e94"
            ],
            "tags": {
              "Name": "PersonalSiteALB"
            },
            "tags_all": {
              "Name": "PersonalSiteALB"
            },
            "vpc_id": "vpc-0b433731e8ef94b8a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/6c012a34e14ef929"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/8718a1259b11d54a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/8718a1259b11d54a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/6c012a34e14ef929",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/8718a1259b11d54a"
          },
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7",
            "certificate_arn": "arn:aws:acm:us-east-1:739275461129:certificate/df581d38-1391-4350-b624-baa07a645da8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/6c012a34e14ef929",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7"
          },
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2ef3a87d6038dc70",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7/7df745bd72513f3c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "premsanity.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7/7df745bd72513f3c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7",
            "priority": 20,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7/7df745bd72513f3c"
          },
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_lb_listener.https",
            "aws_lb_target_group.personal_site_backend_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7/f6a5fd136f1dc22d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "premsanity.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7/f6a5fd136f1dc22d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7",
            "priority": 10,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/6c012a34e14ef929/eef1c8bb75188bc7/f6a5fd136f1dc22d"
          },
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_lb_listener.https",
            "aws_lb_target_group.personal_site_frontend_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "personal_site_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2ef3a87d6038dc70",
            "arn_suffix": "targetgroup/personal-site-backend-tg/2ef3a87d6038dc70",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2ef3a87d6038dc70",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "personal-site-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2ef3a87d6038dc70"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "personal_site_frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a",
            "arn_suffix": "targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "personal-site-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2ef3a87d6038dc70-20250829012635425000000006",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2ef3a87d6038dc70",
            "target_id": "i-0be04929061199618"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.PersonalSiteInstanceProfile",
            "aws_instance.PersonalSiteEC2",
            "aws_lb_target_group.personal_site_backend_tg",
            "aws_security_group.allow_http_https_ssh",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a-20250829012635213900000005",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/77640cfc8bd4f14a",
            "target_id": "i-0be04929061199618"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.PersonalSiteInstanceProfile",
            "aws_instance.PersonalSiteEC2",
            "aws_lb_target_group.personal_site_frontend_tg",
            "aws_security_group.allow_http_https_ssh",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "personal_site_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:route-table/rtb-0d24a3b9e764d4bda",
            "id": "rtb-0d24a3b9e764d4bda",
            "owner_id": "739275461129",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ca43d7cedf53ecc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PersonalSitePublicRouteTable"
            },
            "tags_all": {
              "Name": "PersonalSitePublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739275461129",
            "id": "rtb-0d24a3b9e764d4bda",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.personal_site_igw",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "personal_site_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f1012b829f72d2",
            "region": "us-east-1",
            "route_table_id": "rtb-0d24a3b9e764d4bda",
            "subnet_id": "subnet-0e097f80f9d1a5e94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.personal_site_igw",
            "aws_route_table.personal_site_public_rt",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "personal_site_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c05783accde950e0",
            "region": "us-east-1",
            "route_table_id": "rtb-0d24a3b9e764d4bda",
            "subnet_id": "subnet-0aa907fc0019480f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.personal_site_igw",
            "aws_route_table.personal_site_public_rt",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:security-group/sg-015640bda207f0d8b",
            "description": "Allow HTTP and HTTPS traffic from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015640bda207f0d8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250829012614649800000002",
            "name_prefix": "terraform-",
            "owner_id": "739275461129",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739275461129",
            "id": "sg-015640bda207f0d8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_https_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:security-group/sg-0f49f7c86d96c83c2",
            "description": "Allow traffic from ALB and SSH traffic from specific IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f49f7c86d96c83c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.255.0.111/32"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250829012614649600000001",
            "name_prefix": "terraform-",
            "owner_id": "739275461129",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PersonalSite-EC2-SecurityGroup"
            },
            "tags_all": {
              "Name": "PersonalSite-EC2-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739275461129",
            "id": "sg-0f49f7c86d96c83c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_backend_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend traffic from ALB on port 8080",
            "from_port": 8080,
            "id": "sgrule-1862806216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f49f7c86d96c83c2",
            "security_group_rule_id": "sgr-0514a3a32da1a279e",
            "self": false,
            "source_security_group_id": "sg-015640bda207f0d8b",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.allow_http_https_ssh",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic from ALB",
            "from_port": 80,
            "id": "sgrule-4294128873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f49f7c86d96c83c2",
            "security_group_rule_id": "sgr-0f978c06cc5c5197d",
            "self": false,
            "source_security_group_id": "sg-015640bda207f0d8b",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.allow_http_https_ssh",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "personal_site_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:subnet/subnet-0e097f80f9d1a5e94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e097f80f9d1a5e94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275461129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "PersonalSiteSubnet1"
            },
            "tags_all": {
              "Name": "PersonalSiteSubnet1"
            },
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739275461129",
            "id": "subnet-0e097f80f9d1a5e94",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "personal_site_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:subnet/subnet-0aa907fc0019480f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa907fc0019480f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275461129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "PersonalSiteSubnet2"
            },
            "tags_all": {
              "Name": "PersonalSiteSubnet2"
            },
            "vpc_id": "vpc-0b433731e8ef94b8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "739275461129",
            "id": "subnet-0aa907fc0019480f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "personal_site_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:vpc/vpc-0b433731e8ef94b8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f1eae163941545e",
            "default_route_table_id": "rtb-0b61ccdffba9e0b2d",
            "default_security_group_id": "sg-0de07dc3e040539b9",
            "dhcp_options_id": "dopt-0bacdf14738a8726a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b433731e8ef94b8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b61ccdffba9e0b2d",
            "owner_id": "739275461129",
            "region": "us-east-1",
            "tags": {
              "Name": "PersonalSiteVPC"
            },
            "tags_all": {
              "Name": "PersonalSiteVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}